fix: tabbar is covered by browser

--- a/app/src/pages/app.module.scss
+++ b/app/src/pages/app.module.scss
@@ -24,11 +24,12 @@
   }
 
   .footer {
-    position: sticky;
+    position: fixed;
     bottom: 0;
     width: 100%;
     background-color: white;
     border-top: 0.1rem solid #dfdfdf;
-    padding: 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: env(safe-area-inset-bottom);
   }
 }
